--- a/static/admin/css/login.css
+++ b/static/admin/css/login.css
@@ -26,7 +26,7 @@
     width: 80%;
     height: 40px;
 }
-.user-login-submit{
+.admin-login-submit{
     border-radius: 2%;
     margin-top: 30px;
     margin-left: 10%;
