--- a/static/admin/css/register.css
+++ b/static/admin/css/register.css
@@ -26,7 +26,7 @@
     width: 80%;
     height: 40px;
 }
-.user-register-submit{
+.admin-register-submit{
     border-radius: 2%;
     margin-top: 30px;
     margin-left: 10%;
